[package]
name = "ch4"
version = "0.10.3"
authors = ["Rafael Buchbinder <rafi@rbk.io>"]
edition = "2021"
description = "DNS Client Tool"
license = "MIT OR Apache-2.0"
keywords = ["dns", "dig", "resolver"]
categories = ["command-line-utilities"]
repository = "https://github.com/r-bk/ch4"
exclude = [".git*", "Makefile.toml"]

[features]
default = ["net-tokio"]
net-std = ["rsdns/net-std"]
net-tokio = ["rsdns/net-tokio", "tokio"]
net-async-std = ["rsdns/net-async-std", "async-std"]
net-smol = ["rsdns/net-smol", "smol"]
socket2 = ["rsdns/socket2"]

[dependencies.rsdns]
version = "0.14.0"
default-features = false
# path = "dep/rsdns"

[dependencies]
cfg-if = "1.0.0"
anyhow = "1.0.42"
structopt = "0.3.22"
chrono = "0.4.19"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", optional = true, features = ["rt", "macros"]}
async-std = { version = "1", optional = true, features = ["attributes"] }
smol = { version = "1", optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
]

[build-dependencies]
built = { version = "0.5.1", features = ["git2", "chrono"] }
tera = "1.17.1"
sysinfo = "0.27.1"
